--- a/朗读词汇.md
+++ b/朗读词汇.md
@@ -1,97 +1,149 @@
-อาหาร	อาหาร	食物	อาหาร	อาหาร	食物
+อาหาร	อาหาร	food	อาหาร	อาหาร	food
 
-มื้อ	มื้อ	餐	มื้อ	มื้อ	餐
+มื้อ	มื้อ	meal	มื้อ	มื้อ	meal
 
-มื้อเช้า	มื้อเช้า	早餐	มื้อเช้า	มื้อเช้า	早餐
+มื้อเช้า	มื้อเช้า	breakfast	มื้อเช้า	มื้อเช้า	breakfast
 
-อาหารกลางวัน	อาหารกลางวัน	午餐	อาหารกลางวัน	อาหารกลางวัน	午餐
+อาหารกลางวัน	อาหารกลางวัน	lunch	อาหารกลางวัน	อาหารกลางวัน	lunch
 
-อาหารกลางคืน	อาหารกลางคืน	夜宵	อาหารกลางคืน	อาหารกลางคืน	夜宵
+อาหารกลางคืน	อาหารกลางคืน	midnight snack	อาหารกลางคืน	อาหารกลางคืน	midnight snack
 
-อาหารเที่ยง	อาหารเที่ยง	午餐	อาหารเที่ยง	อาหารเที่ยง	午餐
+อาหารเที่ยง	อาหารเที่ยง	lunch	อาหารเที่ยง	อาหารเที่ยง	lunch
 
-อาหารเย็น	อาหารเย็น	晚餐	อาหารเย็น	อาหารเย็น	晚餐
+อาหารเย็น	อาหารเย็น	dinner	อาหารเย็น	อาหารเย็น	dinner
 
-กิน	กิน	吃	กิน	กิน	吃
+กิน	กิน	eat	กิน	กิน	eat
 
-ข้าว	ข้าว	米饭，饭	ข้าว	ข้าว	米饭，饭
+ข้าว	ข้าว	rice, rice	ข้าว	ข้าว	rice, rice
 
-แล้ว	แล้ว	已经	แล้ว	แล้ว	已经
+แล้ว	แล้ว	already	แล้ว	แล้ว	already
 
-ยัง	ยัง	还	ยัง	ยัง	还
+ยัง	ยัง	yet	ยัง	ยัง	yet
 
-เพิ่ง	เพิ่ง	仅仅	เพิ่ง	เพิ่ง	仅仅
+เพิ่ง	เพิ่ง	just	เพิ่ง	เพิ่ง	just
 
-ถึง	ถึง	抵达	ถึง	ถึง	抵达
+ถึง	ถึง	arrived	ถึง	ถึง	arrived
 
-ล็อก	ล็อก		ล็อก	ล็อก	
+ล็อก	ล็อก	lock	ล็อก	ล็อก	lock
 
-เกี๊ยว	เกี๊ยว	 饺子	เกี๊ยว	เกี๊ยว	 饺子
+เกี๊ยว	เกี๊ยว	dumplings	เกี๊ยว	เกี๊ยว	dumplings
 
-เกี๊ยวน้ำ	เกี๊ยวน้ำ	 水饺	เกี๊ยวน้ำ	เกี๊ยวน้ำ	 水饺
+เกี๊ยวน้ำ	เกี๊ยวน้ำ	boiled dumplings	เกี๊ยวน้ำ	เกี๊ยวน้ำ	boiled dumplings
 
-น้ำ	น้ำ	 水	น้ำ	น้ำ	 水
+น้ำ	น้ำ	water	น้ำ	น้ำ	water
 
-น้ำผลไม้	น้ำผลไม้	 果汁	น้ำผลไม้	น้ำผลไม้	 果汁
+น้ำผลไม้	น้ำผลไม้	juice	น้ำผลไม้	น้ำผลไม้	juice
 
-"น้ำมะพร้าว
+น้ำมะพร้าว	น้ำมะพร้าว	coconut juice	น้ำมะพร้าว	น้ำมะพร้าว	coconut juice
 
-น้ำมะเพราะ"	"น้ำมะพร้าว
+น้ำผึ้ง	น้ำผึ้ง	honey	น้ำผึ้ง	น้ำผึ้ง	honey
 
-น้ำมะเพราะ"	 椰子树	"น้ำมะพร้าว
+หมานโถว	หมานโถว	steamed buns	หมานโถว	หมานโถว	steamed buns
 
-น้ำมะเพราะ"	"น้ำมะพร้าว
+หมี่	หมี่	rice noodles	หมี่	หมี่	rice noodles
 
-น้ำมะเพราะ"	 椰子树
+หมี่น้ำ	หมี่น้ำ	noodle soup	หมี่น้ำ	หมี่น้ำ	noodle soup
 
-น้ำผึ้ง	น้ำผึ้ง	 蜂蜜	น้ำผึ้ง	น้ำผึ้ง	 蜂蜜
+โน้น	โน้น	there (very far)	โน้น	โน้น	there (very far)
 
-หมานโถว	หมานโถว	馒头	หมานโถว	หมานโถว	馒头
+กับข้าว	กับข้าว	dish	กับข้าว	กับข้าว	dish
 
-หมี่	หมี่	米粉	หมี่	หมี่	米粉
+หลาย	หลาย	more	หลาย	หลาย	more
 
-หมี่น้ำ	หมี่น้ำ	汤面	หมี่น้ำ	หมี่น้ำ	汤面
+น้อย	น้อย	less	น้อย	น้อย	less
 
-โน้น	โน้น	那里（非常远）	โน้น	โน้น	那里（非常远）
+อย่าง	อย่าง	style	อย่าง	อย่าง	style
 
-กับข้าว	กับข้าว	菜	กับข้าว	กับข้าว	菜
+หลายอย่าง	หลายอย่าง	all kinds of	หลายอย่าง	หลายอย่าง	all kinds of
 
-หลาย	หลาย	多	หลาย	หลาย	多
+ช่วย	ช่วย	help	ช่วย	ช่วย	help
 
-น้อย	น้อย	少	น้อย	น้อย	少
+ด้วย	ด้วย	also	ด้วย	ด้วย	also
 
-อย่าง	อย่าง	样式	อย่าง	อย่าง	样式
+ช่วยด้วย	ช่วยด้วย	help	ช่วยด้วย	ช่วยด้วย	help
 
-หลายอย่าง	หลายอย่าง	各种各样的	หลายอย่าง	หลายอย่าง	各种各样的
+สลัด	สลัด	salad	สลัด	สลัด	salad
 
-ช่วย	ช่วย	帮助	ช่วย	ช่วย	帮助
+วันนี้	วันนี้	tonight	วันนี้	วันนี้	tonight
 
-ด้วย	ด้วย	也	ด้วย	ด้วย	也
+น่ากิน	น่ากิน	delicious	น่ากิน	น่ากิน	delicious
 
-ช่วยด้วย	ช่วยด้วย	救命	ช่วยด้วย	ช่วยด้วย	救命
+ยํา	ยํา	salad	ยํา	ยํา	salad
 
-สลัด	สลัด	沙拉	สลัด	สลัด	沙拉
+แตงกวา	แตงกวา	cucumber	แตงกวา	แตงกวา	cucumber
 
-วันนี้	วันนี้	今晚	วันนี้	วันนี้	今晚
+แตงโม	แตงโม	watermelon	แตงโม	แตงโม	watermelon
 
-น่ากิน	น่ากิน	可口的	น่ากิน	น่ากิน	可口的
+แตงไทย	แตงไทย	melon	แตงไทย	แตงไทย	melon
 
-ยํา	ยํา	凉拌菜	ยํา	ยํา	凉拌菜
+อร่อย	อร่อย	delicious	อร่อย	อร่อย	delicious
 
-แตงกวา	แตงกวา	黄瓜	แตงกวา	แตงกวา	黄瓜
+ฮื่อ	ฮื่อ	hmm	ฮื่อ	ฮื่อ	hmm
 
-แตงโม	แตงโม	西瓜	แตงโม	แตงโม	西瓜
+ถูกปาก	ถูกปาก	delicious	ถูกปาก	ถูกปาก	delicious
 
-แตงไทย	แตงไทย	甜瓜	แตงไทย	แตงไทย	甜瓜
+ถูกใจ	ถูกใจ	and heart	ถูกใจ	ถูกใจ	and heart
 
-อร่อย	อร่อย	美味的	อร่อย	อร่อย	美味的
+ถูกคอ	ถูกคอ	temper	ถูกคอ	ถูกคอ	temper
 
-ฮื่อ	ฮื่อ	嗯	ฮื่อ	ฮื่อ	嗯
+ทุก	ทุก	every	ทุก	ทุก	every
 
-ถูกปาก	ถูกปาก	美味	ถูกปาก	ถูกปาก	美味
+ร้านอาหาร	ร้านอาหาร	Restaurant	ร้านอาหาร	ร้านอาหาร	Restaurant
 
-ถูกใจ	ถูกใจ	和心意	ถูกใจ	ถูกใจ	和心意
+พนักงานเสิร์ฟ	พนักงานเสิร์ฟ	Waiter	พนักงานเสิร์ฟ	พนักงานเสิร์ฟ	Waiter
 
-ถูกคอ	ถูกคอ	投脾气	ถูกคอ	ถูกคอ	投脾气
+เด็กเสิร์ฟ	เด็กเสิร์ฟ	Waiter	เด็กเสิร์ฟ	เด็กเสิร์ฟ	Waiter
 
-ทุก	ทุก	每个	ทุก	ทุก	每个
+ครัว	ครัว	Kitchen	ครัว	ครัว	Kitchen
+
+แม่ครัว	แม่ครัว	Female chef	แม่ครัว	แม่ครัว	Female chef
+
+พ่อครัว	พ่อครัว	Male chef	พ่อครัว	พ่อครัว	Male chef
+
+เชฟ	เชฟ	Chef	เชฟ	เชฟ	Chef
+
+เมนู	เมนู	Menu	เมนู	เมนู	Menu
+
+ตะเกียบ	ตะเกียบ	Chopsticks	ตะเกียบ	ตะเกียบ	Chopsticks
+
+ถ้วย	ถ้วย	Bowl	ถ้วย	ถ้วย	Bowl
+
+เข้าสีขาว	เข้าสีขาว	White rice	เข้าสีขาว	เข้าสีขาว	White rice
+
+จาน	จาน	Plate	จาน	จาน	Plate
+
+มีด	มีด	Knife	มีด	มีด	Knife
+
+ส้อม	ส้อม	Fork	ส้อม	ส้อม	Fork
+
+ช้อน	ช้อน	Spoon	ช้อน	ช้อน	Spoon
+
+เก้าอี้	เก้าอี้	Chair	เก้าอี้	เก้าอี้	Chair
+
+โต๊ะ	โต๊ะ	Table	โต๊ะ	โต๊ะ	Table
+
+ผัดไทย	ผัดไทย	Fried rice noodles	ผัดไทย	ผัดไทย	Fried rice noodles
+
+ข้าวผัด	ข้าวผัด	Fried rice	ข้าวผัด	ข้าวผัด	Fried rice
+
+ขนมปัง	ขนมปัง	Bread	ขนมปัง	ขนมปัง	Bread
+
+แกงเขียวหวาน	แกงเขียวหวาน	Green curry	แกงเขียวหวาน	แกงเขียวหวาน	Green curry
+
+ต้มยํากุ้ง	ต้มยํากุ้ง	Tom yum shrimp	ต้มยํากุ้ง	ต้มยํากุ้ง	Tom yum shrimp
+
+พะแนงไก่	พะแนงไก่	Curry chicken	พะแนงไก่	พะแนงไก่	Curry chicken
+
+ไก่ผัดเม็ดมะม่วง	ไก่ผัดเม็ดมะม่วง	Chicken fried with cashews	ไก่ผัดเม็ดมะม่วง	ไก่ผัดเม็ดมะม่วง	Chicken fried with cashews
+
+ส้มตำ	ส้มตำ	Papaya salad	ส้มตำ	ส้มตำ	Papaya salad
+
+ไก่ย่าง	ไก่ย่าง	Roasted chicken	ไก่ย่าง	ไก่ย่าง	Roasted chicken
+
+ข้าวเหนียว	ข้าวเหนียว	Glutinous rice	ข้าวเหนียว	ข้าวเหนียว	Glutinous rice
+
+ไข่เจียวหมูสับ	ไข่เจียวหมูสับ	Minced pork fried egg	ไข่เจียวหมูสับ	ไข่เจียวหมูสับ	Minced pork fried egg
+
+ผัดกะเพราหมูสับ	ผัดกะเพราหมูสับ	"Basil fried pork with rice"	ผัดกะเพราหมูสับ	ผัดกะเพราหมูสับ	"Basil fried pork with rice"
+
+ก๋วยเตี๋ยวเนื้อ	ก๋วยเตี๋ยวเนื้อ	Beef noodles	ก๋วยเตี๋ยวเนื้อ	ก๋วยเตี๋ยวเนื้อ	Beef noodles
