--- a/测试.md
+++ b/测试.md
@@ -1,105 +1,107 @@
-| 中文              | 英语                |
-|-------------------|---------------------|
-| 吃               | eat                |
-| 喝               | drink              |
-| 来               | come               |
-| 去               | go                 |
-| 站               | stand              |
-| 坐               | sit                |
-| 做               | do                 |
-| speak            | speak              |
-| 听               | listen             |
-| 看               | look / watch / see |
-| 走               | walk               |
-| 跑               | run                |
-| 跳               | jump               |
-| 进入             | enter / go in      |
-| 走出             | exit / go out      |
-| 睡觉             | sleep              |
-| 洗澡             | take a shower / bathe |
-| 工作             | work               |
-| 学习             | study / learn      |
-| 买               | buy                |
-| 卖               | sell               |
-| 爱               | love               |
-| 给               | give               |
-| 想要             | want               |
-| 打开             | open               |
-| 关闭             | close / shut       |
-| 洗               | wash               |
-| 停止             | stop               |
-| 拿着             | hold               |
-| 投掷             | throw              |
-| 驾驶，操作        | drive / operate    |
-| 飞               | fly                |
-| 问               | ask                |
-| 回答             | answer / reply     |
-| 写               | write              |
-| 读               | read               |
-| 翻译             | translate          |
-| 记住             | remember           |
-| 认为             | think / believe    |
-| 喜欢             | like               |
-| 恨               | hate               |
-| 伤心             | feel sad           |
-| 开心             | feel happy         |
-| 等待             | wait               |
-| 抓住             | catch / grab       |
-| 穿               | wear / put on      |
-| 寻找             | search / look for  |
-| 遇见             | meet               |
-| 携带             | carry              |
-| 帮助             | help               |
-| 开始             | start / begin      |
-| 结束             | finish / end       |
-| 教               | teach              |
-| 忘记             | forget             |
-| 修改             | revise / edit / modify |
-| 开会             | hold a meeting / meet |
-| 希望             | hope               |
-| 害怕             | fear / be afraid of |
-| 生气             | get angry          |
-| 微笑             | smile              |
-| 选择             | choose / select    |
-| 大笑             | laugh              |
-| 上升             | rise               |
-| 下降             | fall / descend     |
-| 停止             | stop               |
-| 预定             | reserve / book     |
-| 休息一晚         | stay overnight     |
-| 旅行             | travel / journey   |
-| 饿               | feel hungry / be hungry |
-| 饱               | feel full          |
-| 伤害             | hurt               |
-| 消失             | disappear          |
-| 加热             | heat               |
-| 冷冻             | freeze             |
-| 解释，描述        | explain / describe |
-| 介绍             | introduce          |
-| 讲述             | tell / narrate     |
-| 称呼             | call / address     |
-| 聊天             | chat               |
-| 邀请             | invite             |
-| 道歉             | apologize          |
-| 感谢             | thank              |
-| 盯着             | stare              |
-| 抓住             | grab / hold        |
-| 闻味道           | smell              |
-| 品尝             | taste              |
-| 咬               | bite               |
-| 舔               | lick               |
-| 打               | hit                |
-| 踢               | kick               |
-| 呼吸             | breathe            |
-| 叫醒             | wake up            |
-| 睡觉             | sleep              |
-| 穿衣服           | get dressed        |
-| 散步             | take a walk / stroll |
-| 玩               | play               |
-| 洗盘子           | wash the dishes    |
-| 洗衣服           | do the laundry     |
-| 清洁             | clean              |
-| 大扫除           | do a thorough cleaning |
-| sexual intercourse | have sex          |
-| 出生             | be born            |
-| 死亡             | die                |
+| ภาษาไทย          | ภาษาอังกฤษ                  |
+|-------------------|-----------------------------|
+| กิน              | eat                         |
+| ดื่ม             | drink                       |
+| มา               | come                        |
+| ไป               | go                          |
+| ยืน              | stand                       |
+| นั่ง              | sit                         |
+| ทำ               | do / make                   |
+| พูด              | speak                       |
+| ฟัง              | listen                      |
+| ดู               | look / watch / see          |
+| เดิน             | walk                        |
+| วิ่ง             | run                         |
+| กระโดด           | jump                        |
+| เข้า             | enter / go in               |
+| ออก              | exit / go out               |
+| นอน              | sleep                       |
+| อาบน้ำ           | take a shower / bathe       |
+| ทำงาน            | work                        |
+| เรียน            | study / learn               |
+| ซื้อ             | buy                         |
+| ขาย             | sell                        |
+| รัก              | love                        |
+| ให้              | give                        |
+| เอา              | take                        |
+| เปิด             | open                        |
+| ปิด              | close                       |
+| ล้าง             | wash                        |
+| หยุด             | stop                        |
+| ถือ              | hold                        |
+| โยน              | throw                       |
+| ขับ              | drive / operate             |
+| บิน              | fly                         |
+| ถาม              | ask                         |
+| ตอบ              | answer / reply              |
+| เขียน            | write                       |
+| อ่าน             | read                        |
+| แปล              | translate                   |
+| จำ               | remember                    |
+| คิด              | think                       |
+| ชอบ              | like                        |
+| เกลียด           | hate                        |
+| เสียใจ           | feel sad                    |
+| ดีใจ             | feel happy                  |
+| รอ               | wait                        |
+| หยิบ             | pick up / grab              |
+| ใส่              | wear / put on               |
+| หา               | search / look for           |
+| เจอ              | meet / find                 |
+| พา               | take / bring someone        |
+| รอคอย            | wait for                    |
+| ช่วย             | help                        |
+| เริ่ม             | start / begin               |
+| เลิก             | stop / quit / end           |
+| สอน              | teach                       |
+| ลืม              | forget                      |
+| แก้ไข            | revise / edit / fix         |
+| ประชุม           | hold a meeting              |
+| หวัง             | hope                        |
+| กลัว             | fear / be afraid of         |
+| โกรธ             | get angry                   |
+| ยิ้ม              | smile                       |
+| เลือก            | choose / select             |
+| หัวเราะ          | laugh                       |
+| ขึ้น             | rise                        |
+| ลง               | fall / descend              |
+| จอด              | stop / park (vehicle)       |
+| จอง              | reserve / book              |
+| พัก              | rest / stay                 |
+| เที่ยว            | travel / go out             |
+| เดินทาง          | travel                      |
+| หิว              | feel hungry                 |
+| อิ่ม              | feel full                   |
+| เจ็บ             | hurt                        |
+| หาย              | disappear / recover         |
+| ร้อน             | feel hot                    |
+| แช่แข็ง          | freeze                      |
+| อธิบาย           | explain                     |
+| แนะนำ            | introduce / recommend       |
+| บอก              | tell / say                  |
+| เรียก            | call                        |
+| คุย              | chat / talk                 |
+| เชิญ             | invite                      |
+| ขอโทษ           | apologize                   |
+| ขอบคุณ           | thank                       |
+| มอง              | look / stare                |
+| จับ              | grab / hold                 |
+| ดม               | smell                      |
+| ชิม              | taste                       |
+| กัด              | bite                        |
+| เลีย             | lick                        |
+| ตี               | hit                         |
+| เตะ              | kick                        |
+| หายใจ           | breathe                     |
+| ตื่น             | wake up                     |
+| หลับ             | sleep                       |
+| แต่งตัว         | get dressed                 |
+| เดิน             | walk                        |
+| เล่น             | play                        |
+| ล้างจาน         | wash the dishes             |
+| ซักผ้า           | do the laundry              |
+| สะอาด           | clean                       |
+| ทำความสะอาด     | do a thorough cleaning      |
+| เพศสัมพันธ์      | have sex                    |
+| เกิด             | be born                     |
+| ดับ              | die                         |
