Update 基础泰语 第一册 9 餐厅朗读词汇.md

--- a/基础泰语 第一册 9 餐厅朗读词汇.md
+++ b/基础泰语 第一册 9 餐厅朗读词汇.md
@@ -1,149 +1,149 @@
-อาหาร	- อาหาร	food	อาหาร -	อาหาร	food
+อาหาร	-	อาหาร	-	food	อาหาร	-	อาหาร	-	อาหาร	food
 
-มื้อ	มื้อ	meal	มื้อ	มื้อ	meal
+มื้อ	-	มื้อ	-	meal	มื้อ	-	มื้อ	-	มื้อ	meal
 
-มื้อเช้า	มื้อเช้า	breakfast	มื้อเช้า	มื้อเช้า	breakfast
+มื้อเช้า	-	มื้อเช้า	-	breakfast	มื้อเช้า	-	มื้อเช้า	-	มื้อเช้า	breakfast
 
-อาหารกลางวัน	อาหารกลางวัน	lunch	อาหารกลางวัน	อาหารกลางวัน	lunch
+อาหารกลางวัน	-	อาหารกลางวัน	-	lunch	อาหารกลางวัน	-	อาหารกลางวัน	-	อาหารกลางวัน	lunch
 
-อาหารกลางคืน	อาหารกลางคืน	midnight snack	อาหารกลางคืน	อาหารกลางคืน	midnight snack
+อาหารกลางคืน	-	อาหารกลางคืน	-	midnight snack	อาหารกลางคืน	-	อาหารกลางคืน	-	อาหารกลางคืน	midnight snack
 
-อาหารเที่ยง	อาหารเที่ยง	lunch	อาหารเที่ยง	อาหารเที่ยง	lunch
+อาหารเที่ยง	-	อาหารเที่ยง	-	lunch	อาหารเที่ยง	-	อาหารเที่ยง	-	อาหารเที่ยง	lunch
 
-อาหารเย็น	อาหารเย็น	dinner	อาหารเย็น	อาหารเย็น	dinner
+อาหารเย็น	-	อาหารเย็น	-	dinner	อาหารเย็น	-	อาหารเย็น	-	อาหารเย็น	dinner
 
-กิน	กิน	eat	กิน	กิน	eat
+กิน	-	กิน	-	eat	กิน	-	กิน	-	กิน	eat
 
-ข้าว	ข้าว	rice, rice	ข้าว	ข้าว	rice, rice
+ข้าว	-	ข้าว	-	rice, rice	ข้าว	-	ข้าว	-	ข้าว	rice, rice
 
-แล้ว	แล้ว	already	แล้ว	แล้ว	already
+แล้ว	-	แล้ว	-	already	แล้ว	-	แล้ว	-	แล้ว	already
 
-ยัง	ยัง	yet	ยัง	ยัง	yet
+ยัง	-	ยัง	-	yet	ยัง	-	ยัง	-	ยัง	yet
 
-เพิ่ง	เพิ่ง	just	เพิ่ง	เพิ่ง	just
+เพิ่ง	-	เพิ่ง	-	just	เพิ่ง	-	เพิ่ง	-	เพิ่ง	just
 
-ถึง	ถึง	arrived	ถึง	ถึง	arrived
+ถึง	-	ถึง	-	arrived	ถึง	-	ถึง	-	ถึง	arrived
 
-ล็อก	ล็อก	lock	ล็อก	ล็อก	lock
+ล็อก	-	ล็อก	-	lock	ล็อก	-	ล็อก	-	ล็อก	lock
 
-เกี๊ยว	เกี๊ยว	dumplings	เกี๊ยว	เกี๊ยว	dumplings
+เกี๊ยว	-	เกี๊ยว	-	dumplings	เกี๊ยว	-	เกี๊ยว	-	เกี๊ยว	dumplings
 
-เกี๊ยวน้ำ	เกี๊ยวน้ำ	boiled dumplings	เกี๊ยวน้ำ	เกี๊ยวน้ำ	boiled dumplings
+เกี๊ยวน้ำ	-	เกี๊ยวน้ำ	-	boiled dumplings	เกี๊ยวน้ำ	-	เกี๊ยวน้ำ	-	เกี๊ยวน้ำ	boiled dumplings
 
-น้ำ	น้ำ	water	น้ำ	น้ำ	water
+น้ำ	-	น้ำ	-	water	น้ำ	-	น้ำ	-	น้ำ	water
 
-น้ำผลไม้	น้ำผลไม้	juice	น้ำผลไม้	น้ำผลไม้	juice
+น้ำผลไม้	-	น้ำผลไม้	-	juice	น้ำผลไม้	-	น้ำผลไม้	-	น้ำผลไม้	juice
 
-น้ำมะพร้าว	น้ำมะพร้าว	coconut juice	น้ำมะพร้าว	น้ำมะพร้าว	coconut juice
+น้ำมะพร้าว	-	น้ำมะพร้าว	-	coconut juice	น้ำมะพร้าว	-	น้ำมะพร้าว	-	น้ำมะพร้าว	coconut juice
 
-น้ำผึ้ง	น้ำผึ้ง	honey	น้ำผึ้ง	น้ำผึ้ง	honey
+น้ำผึ้ง	-	น้ำผึ้ง	-	honey	น้ำผึ้ง	-	น้ำผึ้ง	-	น้ำผึ้ง	honey
 
-หมานโถว	หมานโถว	steamed buns	หมานโถว	หมานโถว	steamed buns
+หมานโถว	-	หมานโถว	-	steamed buns	หมานโถว	-	หมานโถว	-	หมานโถว	steamed buns
 
-หมี่	หมี่	rice noodles	หมี่	หมี่	rice noodles
+หมี่	-	หมี่	-	rice noodles	หมี่	-	หมี่	-	หมี่	rice noodles
 
-หมี่น้ำ	หมี่น้ำ	noodle soup	หมี่น้ำ	หมี่น้ำ	noodle soup
+หมี่น้ำ	-	หมี่น้ำ	-	noodle soup	หมี่น้ำ	-	หมี่น้ำ	-	หมี่น้ำ	noodle soup
 
-โน้น	โน้น	there (very far)	โน้น	โน้น	there (very far)
+โน้น	-	โน้น	-	there (very far)	โน้น	-	โน้น	-	โน้น	there (very far)
 
-กับข้าว	กับข้าว	dish	กับข้าว	กับข้าว	dish
+กับข้าว	-	กับข้าว	-	dish	กับข้าว	-	กับข้าว	-	กับข้าว	dish
 
-หลาย	หลาย	more	หลาย	หลาย	more
+หลาย	-	หลาย	-	more	หลาย	-	หลาย	-	หลาย	more
 
-น้อย	น้อย	less	น้อย	น้อย	less
+น้อย	-	น้อย	-	less	น้อย	-	น้อย	-	น้อย	less
+อย่าง	-	อย่าง	-	style	อย่าง	-	อย่าง	-	อย่าง	style
 
-อย่าง	อย่าง	style	อย่าง	อย่าง	style
+หลายอย่าง	-	หลายอย่าง	-	all kinds of	หลายอย่าง	-	หลายอย่าง	-	หลายอย่าง	all kinds of
 
-หลายอย่าง	หลายอย่าง	all kinds of	หลายอย่าง	หลายอย่าง	all kinds of
+ช่วย	-	ช่วย	-	help	ช่วย	-	ช่วย	-	ช่วย	help
 
-ช่วย	ช่วย	help	ช่วย	ช่วย	help
+ด้วย	-	ด้วย	-	also	ด้วย	-	ด้วย	-	ด้วย	also
 
-ด้วย	ด้วย	also	ด้วย	ด้วย	also
+ช่วยด้วย	-	ช่วยด้วย	-	help	ช่วยด้วย	-	ช่วยด้วย	-	ช่วยด้วย	help
 
-ช่วยด้วย	ช่วยด้วย	help	ช่วยด้วย	ช่วยด้วย	help
+สลัด	-	สลัด	-	salad	สลัด	-	สลัด	-	สลัด	salad
 
-สลัด	สลัด	salad	สลัด	สลัด	salad
+วันนี้	-	วันนี้	-	tonight	วันนี้	-	วันนี้	-	วันนี้	tonight
 
-วันนี้	วันนี้	tonight	วันนี้	วันนี้	tonight
+น่ากิน	-	น่ากิน	-	delicious	น่ากิน	-	น่ากิน	-	น่ากิน	delicious
 
-น่ากิน	น่ากิน	delicious	น่ากิน	น่ากิน	delicious
+ยํา	-	ยํา	-	salad	ยํา	-	ยํา	-	ยํา	salad
 
-ยํา	ยํา	salad	ยํา	ยํา	salad
+แตงกวา	-	แตงกวา	-	cucumber	แตงกวา	-	แตงกวา	-	แตงกวา	cucumber
 
-แตงกวา	แตงกวา	cucumber	แตงกวา	แตงกวา	cucumber
 
-แตงโม	แตงโม	watermelon	แตงโม	แตงโม	watermelon
+แตงโม	-	แตงโม	-	watermelon	แตงโม	-	แตงโม	-	แตงโม	watermelon
 
-แตงไทย	แตงไทย	melon	แตงไทย	แตงไทย	melon
+แตงไทย	-	แตงไทย	-	melon	แตงไทย	-	แตงไทย	-	แตงไทย	melon
 
-อร่อย	อร่อย	delicious	อร่อย	อร่อย	delicious
+อร่อย	-	อร่อย	-	delicious	อร่อย	-	อร่อย	-	อร่อย	delicious
 
-ฮื่อ	ฮื่อ	hmm	ฮื่อ	ฮื่อ	hmm
+ฮื่อ	-	ฮื่อ	-	hmm	ฮื่อ	-	ฮื่อ	-	ฮื่อ	hmm
 
-ถูกปาก	ถูกปาก	delicious	ถูกปาก	ถูกปาก	delicious
+ถูกปาก	-	ถูกปาก	-	delicious	ถูกปาก	-	ถูกปาก	-	ถูกปาก	delicious
 
-ถูกใจ	ถูกใจ	and heart	ถูกใจ	ถูกใจ	and heart
+ถูกใจ	-	ถูกใจ	-	and heart	ถูกใจ	-	ถูกใจ	-	ถูกใจ	and heart
 
-ถูกคอ	ถูกคอ	temper	ถูกคอ	ถูกคอ	temper
+ถูกคอ	-	ถูกคอ	-	temper	ถูกคอ	-	ถูกคอ	-	ถูกคอ	temper
 
-ทุก	ทุก	every	ทุก	ทุก	every
+ทุก	-	ทุก	-	every	ทุก	-	ทุก	-	ทุก	every
 
-ร้านอาหาร	ร้านอาหาร	Restaurant	ร้านอาหาร	ร้านอาหาร	Restaurant
+ร้านอาหาร	-	ร้านอาหาร	-	Restaurant	ร้านอาหาร	-	ร้านอาหาร	-	ร้านอาหาร	Restaurant
 
-พนักงานเสิร์ฟ	พนักงานเสิร์ฟ	Waiter	พนักงานเสิร์ฟ	พนักงานเสิร์ฟ	Waiter
+พนักงานเสิร์ฟ	-	พนักงานเสิร์ฟ	-	Waiter	พนักงานเสิร์ฟ	-	พนักงานเสิร์ฟ	-	พนักงานเสิร์ฟ	Waiter
 
-เด็กเสิร์ฟ	เด็กเสิร์ฟ	Waiter	เด็กเสิร์ฟ	เด็กเสิร์ฟ	Waiter
+เด็กเสิร์ฟ	-	เด็กเสิร์ฟ	-	Waiter	เด็กเสิร์ฟ	-	เด็กเสิร์ฟ	-	เด็กเสิร์ฟ	Waiter
 
-ครัว	ครัว	Kitchen	ครัว	ครัว	Kitchen
+ครัว	-	ครัว	-	Kitchen	ครัว	-	ครัว	-	ครัว	Kitchen
 
-แม่ครัว	แม่ครัว	Female chef	แม่ครัว	แม่ครัว	Female chef
+แม่ครัว	-	แม่ครัว	-	Female chef	แม่ครัว	-	แม่ครัว	-	แม่ครัว	Female chef
 
-พ่อครัว	พ่อครัว	Male chef	พ่อครัว	พ่อครัว	Male chef
+พ่อครัว	-	พ่อครัว	-	Male chef	พ่อครัว	-	พ่อครัว	-	พ่อครัว	Male chef
 
-เชฟ	เชฟ	Chef	เชฟ	เชฟ	Chef
+เชฟ	-	เชฟ	-	Chef	เชฟ	-	เชฟ	-	เชฟ	Chef
 
-เมนู	เมนู	Menu	เมนู	เมนู	Menu
+เมนู	-	เมนู	-	Menu	เมนู	-	เมนู	-	เมนู	Menu
 
-ตะเกียบ	ตะเกียบ	Chopsticks	ตะเกียบ	ตะเกียบ	Chopsticks
+ตะเกียบ	-	ตะเกียบ	-	Chopsticks	ตะเกียบ	-	ตะเกียบ	-	ตะเกียบ	Chopsticks
 
-ถ้วย	ถ้วย	Bowl	ถ้วย	ถ้วย	Bowl
+ถ้วย	-	ถ้วย	-	Bowl	ถ้วย	-	ถ้วย	-	ถ้วย	Bowl
 
-เข้าสีขาว	เข้าสีขาว	White rice	เข้าสีขาว	เข้าสีขาว	White rice
+เข้าสีขาว	-	เข้าสีขาว	-	White rice	เข้าสีขาว	-	เข้าสีขาว	-	เข้าสีขาว	White rice
 
-จาน	จาน	Plate	จาน	จาน	Plate
+จาน	-	จาน	-	Plate	จาน	-	จาน	-	จาน	Plate
 
-มีด	มีด	Knife	มีด	มีด	Knife
+มีด	-	มีด	-	Knife	มีด	-	มีด	-	มีด	Knife
 
-ส้อม	ส้อม	Fork	ส้อม	ส้อม	Fork
+ส้อม	-	ส้อม	-	Fork	ส้อม	-	ส้อม	-	ส้อม	Fork
 
-ช้อน	ช้อน	Spoon	ช้อน	ช้อน	Spoon
+ช้อน	-	ช้อน	-	Spoon	ช้อน	-	ช้อน	-	ช้อน	Spoon
 
-เก้าอี้	เก้าอี้	Chair	เก้าอี้	เก้าอี้	Chair
+เก้าอี้	-	เก้าอี้	-	Chair	เก้าอี้	-	เก้าอี้	-	เก้าอี้	Chair
 
-โต๊ะ	โต๊ะ	Table	โต๊ะ	โต๊ะ	Table
+โต๊ะ	-	โต๊ะ	-	Table	โต๊ะ	-	โต๊ะ	-	โต๊ะ	Table
 
-ผัดไทย	ผัดไทย	Fried rice noodles	ผัดไทย	ผัดไทย	Fried rice noodles
+ผัดไทย	-	ผัดไทย	-	Fried rice noodles	ผัดไทย	-	ผัดไทย	-	ผัดไทย	Fried rice noodles
 
-ข้าวผัด	ข้าวผัด	Fried rice	ข้าวผัด	ข้าวผัด	Fried rice
+ข้าวผัด	-	ข้าวผัด	-	Fried rice	ข้าวผัด	-	ข้าวผัด	-	ข้าวผัด	Fried rice
 
-ขนมปัง	ขนมปัง	Bread	ขนมปัง	ขนมปัง	Bread
+ขนมปัง	-	ขนมปัง	-	Bread	ขนมปัง	-	ขนมปัง	-	ขนมปัง	Bread
 
-แกงเขียวหวาน	แกงเขียวหวาน	Green curry	แกงเขียวหวาน	แกงเขียวหวาน	Green curry
+แกงเขียวหวาน	-	แกงเขียวหวาน	-	Green curry	แกงเขียวหวาน	-	แกงเขียวหวาน	-	แกงเขียวหวาน	Green curry
 
-ต้มยํากุ้ง	ต้มยํากุ้ง	Tom yum shrimp	ต้มยํากุ้ง	ต้มยํากุ้ง	Tom yum shrimp
+ต้มยํากุ้ง	-	ต้มยํากุ้ง	-	Tom yum shrimp	ต้มยํากุ้ง	-	ต้มยํากุ้ง	-	ต้มยํากุ้ง	Tom yum shrimp
 
-พะแนงไก่	พะแนงไก่	Curry chicken	พะแนงไก่	พะแนงไก่	Curry chicken
+พะแนงไก่	-	พะแนงไก่	-	Curry chicken	พะแนงไก่	-	พะแนงไก่	-	พะแนงไก่	Curry chicken
 
-ไก่ผัดเม็ดมะม่วง	ไก่ผัดเม็ดมะม่วง	Chicken fried with cashews	ไก่ผัดเม็ดมะม่วง	ไก่ผัดเม็ดมะม่วง	Chicken fried with cashews
+ไก่ผัดเม็ดมะม่วง	-	ไก่ผัดเม็ดมะม่วง	-	Chicken fried with cashews	ไก่ผัดเม็ดมะม่วง	-	ไก่ผัดเม็ดมะม่วง	-	ไก่ผัดเม็ดมะม่วง	Chicken fried with cashews
 
-ส้มตำ	ส้มตำ	Papaya salad	ส้มตำ	ส้มตำ	Papaya salad
+ส้มตำ	-	ส้มตำ	-	Papaya salad	ส้มตำ	-	ส้มตำ	-	ส้มตำ	Papaya salad
 
-ไก่ย่าง	ไก่ย่าง	Roasted chicken	ไก่ย่าง	ไก่ย่าง	Roasted chicken
+ไก่ย่าง	-	ไก่ย่าง	-	Roasted chicken	ไก่ย่าง	-	ไก่ย่าง	-	ไก่ย่าง	Roasted chicken
 
-ข้าวเหนียว	ข้าวเหนียว	Glutinous rice	ข้าวเหนียว	ข้าวเหนียว	Glutinous rice
+ข้าวเหนียว	-	ข้าวเหนียว	-	Glutinous rice	ข้าวเหนียว	-	ข้าวเหนียว	-	ข้าวเหนียว	Glutinous rice
 
-ไข่เจียวหมูสับ	ไข่เจียวหมูสับ	Minced pork fried egg	ไข่เจียวหมูสับ	ไข่เจียวหมูสับ	Minced pork fried egg
+ไข่เจียวหมูสับ	-	ไข่เจียวหมูสับ	-	Minced pork fried egg	ไข่เจียวหมูสับ	-	ไข่เจียวหมูสับ	-	ไข่เจียวหมูสับ	Minced pork fried egg
 
-ผัดกะเพราหมูสับ	ผัดกะเพราหมูสับ	"Basil fried pork with rice"	ผัดกะเพราหมูสับ	ผัดกะเพราหมูสับ	"Basil fried pork with rice"
+ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	-	"Basil fried pork with rice"	ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	-	ผัดกะเพราหมูสับ	"Basil fried pork with rice"
 
-ก๋วยเตี๋ยวเนื้อ	ก๋วยเตี๋ยวเนื้อ	Beef noodles	ก๋วยเตี๋ยวเนื้อ	ก๋วยเตี๋ยวเนื้อ	Beef noodles
+ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	-	Beef noodles	ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	-	ก๋วยเตี๋ยวเนื้อ	Beef noodles
