--- a/必须会的100个基础动词.md
+++ b/必须会的100个基础动词.md
@@ -1,217 +1,217 @@
-# กริยาที่คุณจะต้องเรียนรู้
+# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
 
-กริยาที่คุณจะต้องเรียนรู้
+กริยา verb กริยา 	-	กริยา	-	 กริยา 	-	กริยา 	-	กริยา 	-	กริยา 	-	กริยา verb
 
-กริยาที่คุณจะต้องเรียนรู้
 
-กริยาที่คุณจะต้องเรียนรู้
+กิน	-	กิน	-	กิน	eat	กิน	-	กิน	eat	กิน
 
-กิน	กิน	eat	กิน	กิน	eat	กิน
+ดื่ม	-	ดื่ม	-	ดื่ม	drink	ดื่ม	-	ดื่ม	drink	ดื่ม
 
-ดื่ม	ดื่ม	drink	ดื่ม	ดื่ม	drink	ดื่ม
+มา	-	มา	-	มา	come	มา	-	มา	come	มา
 
-มา	มา	come	มา	มา	come	มา
+ไป	-	ไป	-	ไป	go	ไป	-	ไป	go	ไป
 
-ไป	ไป	go	ไป	ไป	go	ไป
+ยืน	-	ยืน	-	ยืน	stand	ยืน	-	ยืน	stand	ยืน
 
-ยืน	ยืน	stand	ยืน	ยืน	stand	ยืน
+นั่ง	-	นั่ง	-	นั่ง	sit	นั่ง	-	นั่ง	sit	นั่ง
 
-นั่ง	นั่ง	sit	นั่ง	นั่ง	sit	นั่ง
+ทำ	-	ทำ	-	ทำ	do/make	ทำ	-	ทำ	do/make	ทำ
 
-ทำ	ทำ	do/make	ทำ	ทำ	do/make	ทำ
+พูด	-	พูด	-	พูด	speak	พูด	-	พูด	speak	พูด
 
-พูด	พูด	speak	พูด	พูด	speak	พูด
+ฟัง	-	ฟัง	-	ฟัง	listen	ฟัง	-	ฟัง	listen	ฟัง
 
-ฟัง	ฟัง	listen	ฟัง	ฟัง	listen	ฟัง
+ดู	-	ดู	-	ดู	look/watch/see	ดู	-	ดู	look/watch/see	ดู
 
-ดู	ดู	look/watch/see	ดู	ดู	look/watch/see	ดู
+เดิน	-	เดิน	-	เดิน	walk	เดิน	-	เดิน	walk	เดิน
 
-เดิน	เดิน	walk	เดิน	เดิน	walk	เดิน
+วิ่ง	-	วิ่ง	-	วิ่ง	run	วิ่ง	-	วิ่ง	run	วิ่ง
 
-วิ่ง	วิ่ง	run	วิ่ง	วิ่ง	run	วิ่ง
+กระโดด	-	กระโดด	-	กระโดด	jump	กระโดด	-	กระโดด	jump	กระโดด
 
-กระโดด	กระโดด	jump	กระโดด	กระโดด	jump	กระโดด
+เข้า	-	เข้า	-	เข้า	enter/go in	เข้า	-	เข้า	enter/go in	เข้า
 
-เข้า	เข้า	enter/go in	เข้า	เข้า	enter/go in	เข้า
+ออก	-	ออก	-	ออก	exit/go out	ออก	-	ออก	exit/go out	ออก
 
-ออก	ออก	exit/go out	ออก	ออก	exit/go out	ออก
+นอน	-	นอน	-	นอน	sleep	นอน	-	นอน	sleep	นอน
 
-นอน	นอน	sleep	นอน	นอน	sleep	นอน
+อาบน้ำ	-	อาบน้ำ	-	อาบน้ำ	take a shower / bathe	อาบน้ำ	-	อาบน้ำ	take a shower / bathe	อาบน้ำ
 
-อาบน้ำ	อาบน้ำ	take a shower / bathe	อาบน้ำ	อาบน้ำ	take a shower / bathe	อาบน้ำ
+ทำงาน	-	ทำงาน	-	ทำงาน	work	ทำงาน	-	ทำงาน	work	ทำงาน
 
-ทำงาน	ทำงาน	work	ทำงาน	ทำงาน	work	ทำงาน
+เรียน	-	เรียน	-	เรียน	study/learn	เรียน	-	เรียน	study/learn	เรียน
 
-เรียน	เรียน	study/learn	เรียน	เรียน	study/learn	เรียน
+ซื้อ	-	ซื้อ	-	ซื้อ	buy	ซื้อ	-	ซื้อ	buy	ซื้อ
 
-ซื้อ	ซื้อ	buy	ซื้อ	ซื้อ	buy	ซื้อ
+ขาย	-	ขาย	-	ขาย	sell	ขาย	-	ขาย	sell	ขาย
 
-ขาย	ขาย	sell	ขาย	ขาย	sell	ขาย
+รัก	-	รัก	-	รัก	love	รัก	-	รัก	love	รัก
 
-รัก	รัก	love	รัก	รัก	love	รัก
+ให้	-	ให้	-	ให้	give	ให้	-	ให้	give	ให้
 
-ให้	ให้	give	ให้	ให้	give	ให้
+เอา	-	เอา	-	เอา	take	เอา	-	เอา	take	เอา
 
-เอา	เอา	take	เอา	เอา	take	เอา
+เปิด	-	เปิด	-	เปิด	open	เปิด	-	เปิด	open	เปิด
 
-เปิด	เปิด	open	เปิด	เปิด	open	เปิด
+ปิด	-	ปิด	-	ปิด	close	ปิด	-	ปิด	close	ปิด
 
-ปิด	ปิด	close	ปิด	ปิด	close	ปิด
+ล้าง	-	ล้าง	-	ล้าง	wash	ล้าง	-	ล้าง	wash	ล้าง
 
-ล้าง	ล้าง	wash	ล้าง	ล้าง	wash	ล้าง
+หยุด	-	หยุด	-	หยุด	stop	หยุด	-	หยุด	stop	หยุด
 
-หยุด	หยุด	stop	หยุด	หยุด	stop	หยุด
+ถือ	-	ถือ	-	ถือ	hold	ถือ	-	ถือ	hold	ถือ
 
-ถือ	ถือ	hold	ถือ	ถือ	hold	ถือ
+**โยน	-	โยน	-	โยน	throw	โยน	-	โยน	throw	โยน**
 
-โยน	โยน	throw	โยน	โยน	throw	โยน
+**ขับ	-	ขับ	-	ขับ	drive/operate	ขับ	-	ขับ	drive/operate	ขับ**
 
-ขับ	ขับ	drive/operate	ขับ	ขับ	drive/operate	ขับ
+บิน	-	บิน	-	บิน	fly	บิน	-	บิน	fly	บิน
 
-บิน	บิน	fly	บิน	บิน	fly	บิน
+ถาม	-	ถาม	-	ถาม	ask	ถาม	-	ถาม	ask	ถาม
 
-ถาม	ถาม	ask	ถาม	ถาม	ask	ถาม
+ตอบ	-	ตอบ	-	ตอบ	answer/reply	ตอบ	-	ตอบ	answer/reply	ตอบ
 
-ตอบ	ตอบ	answer/reply	ตอบ	ตอบ	answer/reply	ตอบ
+เขียน	-	เขียน	-	เขียน	write	เขียน	-	เขียน	write	เขียน
 
-เขียน	เขียน	write	เขียน	เขียน	write	เขียน
+อ่าน	-	อ่าน	-	อ่าน	read	อ่าน	-	อ่าน	read	อ่าน
 
-อ่าน	อ่าน	read	อ่าน	อ่าน	read	อ่าน
+แปล	-	แปล	-	แปล	translate	แปล	-	แปล	translate	แปล
 
-แปล	แปล	translate	แปล	แปล	translate	แปล
+จำ	-	จำ	-	จำ	remember	จำ	-	จำ	remember	จำ
 
-จำ	จำ	remember	จำ	จำ	remember	จำ
+คิด	-	คิด	-	คิด	think	คิด	-	คิด	think	คิด
 
-คิด	คิด	think	คิด	คิด	think	คิด
+ชอบ	-	ชอบ	-	ชอบ	like	ชอบ	-	ชอบ	like	ชอบ
 
-ชอบ	ชอบ	like	ชอบ	ชอบ	like	ชอบ
+เกลียด	-	เกลียด	-	เกลียด	hate	เกลียด	-	เกลียด	hate	เกลียด
 
-เกลียด	เกลียด	hate	เกลียด	เกลียด	hate	เกลียด
+เสียใจ	-	เสียใจ	-	เสียใจ	feel sad	เสียใจ	-	เสียใจ	feel sad	เสียใจ
 
-เสียใจ	เสียใจ	feel sad	เสียใจ	เสียใจ	feel sad	เสียใจ
+ดีใจ	-	ดีใจ	-	ดีใจ	feel happy	ดีใจ	-	ดีใจ	feel happy	ดีใจ
 
-ดีใจ	ดีใจ	feel happy	ดีใจ	ดีใจ	feel happy	ดีใจ
+รอ	-	รอ	-	รอ	wait	รอ	-	รอ	wait	รอ
 
-รอ	รอ	wait	รอ	รอ	wait	รอ
+หยิบ	-	หยิบ	-	หยิบ	pick up/grab	หยิบ	-	หยิบ	pick up/grab	หยิบ
 
-หยิบ	หยิบ	pick up/grab	หยิบ	หยิบ	pick up/grab	หยิบ
+ใส่ 	-	ใส่ 	-	ใส่ 	wear/put on	ใส่ 	-	ใส่ 	wear/put on	ใส่ 
 
-ใส่ 	ใส่ 	wear/put on	ใส่ 	ใส่ 	wear/put on	ใส่ 
+หา	-	หา	-	หา	search / look for	หา	-	หา	search / look for	หา
 
-หา	หา	search / look for	หา	หา	search / look for	หา
+เจอ	-	เจอ	-	เจอ	meet/find	เจอ	-	เจอ	meet/find	เจอ
 
-เจอ	เจอ	meet/find	เจอ	เจอ	meet/find	เจอ
+พา	-	พา	-	พา	take/bring someone	พา	-	พา	take/bring someone	พา
 
-พา	พา	take/bring someone	พา	พา	take/bring someone	พา
+**รอคอย	-	รอคอย	-	รอคอย	wait for	รอคอย	-	รอคอย	wait for	รอคอย**
 
-รอคอย	รอคอย	wait for	รอคอย	รอคอย	wait for	รอคอย
+ช่วย	-	ช่วย	-	ช่วย	help	ช่วย	-	ช่วย	help	ช่วย
 
-ช่วย	ช่วย	help	ช่วย	ช่วย	help	ช่วย
+**เริ่ม	-	เริ่ม	-	เริ่ม	start/begin	เริ่ม	-	เริ่ม	start/begin	เริ่ม**
 
-เริ่ม	เริ่ม	start/begin	เริ่ม	เริ่ม	start/begin	เริ่ม
+**เลิก	-	เลิก	-	เลิก	stop/quit/end	เลิก	-	เลิก	stop/quit/end	เลิก**
 
-เลิก	เลิก	stop/quit/end	เลิก	เลิก	stop/quit/end	เลิก
+สอน	-	สอน	-	สอน	teach	สอน	-	สอน	teach	สอน
 
-สอน	สอน	teach	สอน	สอน	teach	สอน
+**ลืม	-	ลืม	-	ลืม	forget	ลืม	-	ลืม	forget	ลืม**
 
-ลืม	ลืม	forget	ลืม	ลืม	forget	ลืม
+**แก้ไข	-	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข**
 
-แก้ไข	แก้ไข	revise/edit/fix	แก้ไข	แก้ไข	revise/edit/fix	แก้ไข
+**ประชุม	-	ประชุม	-	ประชุม	hold a meeting	ประชุม	-	ประชุม	hold a meeting	ประชุม**
 
-ประชุม	ประชุม	hold a meeting	ประชุม	ประชุม	hold a meeting	ประชุม
+**หวัง	-	หวัง	-	หวัง	hope	หวัง	-	หวัง	hope	หวัง**
 
-หวัง	หวัง	hope	หวัง	หวัง	hope	หวัง
+**กลัว	-	กลัว	-	กลัว	fear/be afraid of	กลัว	-	กลัว	fear/be afraid of	กลัว**
 
-กลัว	กลัว	fear/be afraid of	กลัว	กลัว	fear/be afraid of	กลัว
+**โกรธ	-	โกรธ	-	โกรธ	get angry	โกรธ	-	โกรธ	get angry	โกรธ**
 
-โกรธ	โกรธ	get angry	โกรธ	โกรธ	get angry	โกรธ
+**ยิ้ม	-	ยิ้ม	-	ยิ้ม	smile	ยิ้ม	-	ยิ้ม	smile	ยิ้ม**
 
-ยิ้ม	ยิ้ม	smile	ยิ้ม	ยิ้ม	smile	ยิ้ม
+**เลือก	-	เลือก	-	เลือก	choose/select	เลือก	-	เลือก	choose/select	เลือก**
 
-เลือก	เลือก	choose/select	เลือก	เลือก	choose/select	เลือก
+**หัวเราะ	-	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ**
 
-หัวเราะ	หัวเราะ	laugh	หัวเราะ	หัวเราะ	laugh	หัวเราะ
+**ขึ้น	-	ขึ้น	-	ขึ้น	rise	ขึ้น	-	ขึ้น	rise	ขึ้น**
 
-ขึ้น	ขึ้น	rise	ขึ้น	ขึ้น	rise	ขึ้น
+**ลง	-	ลง	-	ลง	fall / descend	ลง	-	ลง	fall / descend	ลง**
 
-ลง	ลง	fall / descend	ลง	ลง	fall / descend	ลง
+**จอด	-	จอด	-	จอด	stop/park(vehicle)	จอด	-	จอด	stop/park(vehicle)	จอด**
 
-จอด	จอด	stop/park(vehicle)	จอด	จอด	stop/park(vehicle)	จอด
+**จอง	-	จอง	-	จอง	reserve/book	จอง	-	จอง	reserve/book	จอง**
 
-จอง	จอง	reserve/book	จอง	จอง	reserve/book	จอง
+พัก	-	พัก	-	พัก	rest/stay	พัก	-	พัก	rest/stay	พัก
 
-พัก	พัก	rest/stay	พัก	พัก	rest/stay	พัก
+เที่ยว	-	เที่ยว	-	เที่ยว	travel/go out	เที่ยว	-	เที่ยว	travel/go out	เที่ยว
 
-เที่ยว	เที่ยว	travel/go out	เที่ยว	เที่ยว	travel/go out	เที่ยว
+**เดินทาง	-	เดินทาง	-	เดินทาง	travel	เดินทาง	-	เดินทาง	travel	เดินทาง**
 
-เดินทาง	เดินทาง	travel	เดินทาง	เดินทาง	travel	เดินทาง
+**หิว	-	หิว	-	หิว	feel hungry	หิว	-	หิว	feel hungry	หิว**
 
-หิว	หิว	feel hungry	หิว	หิว	feel hungry	หิว
+**อิ่ม	-	อิ่ม	-	อิ่ม	feel full	อิ่ม	-	อิ่ม	feel full	อิ่ม**
 
-อิ่ม	อิ่ม	feel full	อิ่ม	อิ่ม	feel full	อิ่ม
+**เจ็บ	-	เจ็บ	-	เจ็บ	hurt	เจ็บ	-	เจ็บ	hurt	เจ็บ**
 
-เจ็บ	เจ็บ	hurt	เจ็บ	เจ็บ	hurt	เจ็บ
+หาย	-	หาย	-	หาย	disappear / recover	หาย	-	หาย	disappear / recover	หาย
 
-หาย	หาย	disappear / recover	หาย	หาย	disappear / recover	หาย
+**ร้อน	-	ร้อน	-	ร้อน	feel hot	ร้อน	-	ร้อน	feel hot	ร้อน**
 
-ร้อน	ร้อน	feel hot	ร้อน	ร้อน	feel hot	ร้อน
+**แช่แข็ง	-	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง**
 
-แช่แข็ง	แช่แข็ง	freeze	แช่แข็ง	แช่แข็ง	freeze	แช่แข็ง
+**อธิบาย	-	อธิบาย	-	อธิบาย	explain	อธิบาย	-	อธิบาย	explain	อธิบาย**
 
-อธิบาย	อธิบาย	explain	อธิบาย	อธิบาย	explain	อธิบาย
+**แนะนำ	-	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ**
 
-แนะนำ	แนะนำ	introduce / recommend	แนะนำ	แนะนำ	introduce / recommend	แนะนำ
+บอก	-	บอก	-	บอก	tell/say	บอก	-	บอก	tell/say	บอก
 
-บอก	บอก	tell/say	บอก	บอก	tell/say	บอก
+**เรียก	-	เรียก	-	เรียก	call	เรียก	-	เรียก	call	เรียก&&
 
-เรียก	เรียก	call	เรียก	เรียก	call	เรียก
+คุย	-	คุย	-	คุย	chat/talk	คุย	-	คุย	chat/talk	คุย
 
-คุย	คุย	chat/talk	คุย	คุย	chat/talk	คุย
+เชิญ	-	เชิญ	-	เชิญ	invite	เชิญ	-	เชิญ	invite	เชิญ
 
-เชิญ	เชิญ	invite	เชิญ	เชิญ	invite	เชิญ
+**ขอโทษ	-	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ**
 
-ขอโทษ	ขอโทษ	apologize	ขอโทษ	ขอโทษ	apologize	ขอโทษ
+ขอบคุณ	-	ขอบคุณ	-	ขอบคุณ	thank	ขอบคุณ	-	ขอบคุณ	thank	ขอบคุณ
 
-ขอบคุณ	ขอบคุณ	thank	ขอบคุณ	ขอบคุณ	thank	ขอบคุณ
+**มอง	-	มอง	-	มอง	look/stare	มอง	-	มอง	look/stare	มอง**
 
-มอง	มอง	look/stare	มอง	มอง	look/stare	มอง
+**จับ	-	จับ	-	จับ	grab/hold	จับ	-	จับ	grab/hold	จับ**
 
-จับ	จับ	grab/hold	จับ	จับ	grab/hold	จับ
+**ดม	-	ดม	-	ดม	smell	ดม	-	ดม	smell	ดม**
 
-ดม	ดม	smell	ดม	ดม	smell	ดม
+**ชิม	-	ชิม	-	ชิม	taste	ชิม	-	ชิม	taste	ชิม**
 
-ชิม	ชิม	taste	ชิม	ชิม	taste	ชิม
+**กัด	-	กัด	-	กัด	bite	กัด	-	กัด	bite	กัด**
 
-กัด	กัด	bite	กัด	กัด	bite	กัด
+**เลีย	-	เลีย	-	เลีย	lick	เลีย	-	เลีย	lick	เลีย**
 
-เลีย	เลีย	lick	เลีย	เลีย	lick	เลีย
+ตี	-	ตี	-	ตี	hit	ตี	-	ตี	hit	ตี
 
-ตี	ตี	hit	ตี	ตี	hit	ตี
+**เตะ	-	เตะ	-	เตะ	kick	เตะ	-	เตะ	kick	เตะ**
 
-เตะ	เตะ	kick	เตะ	เตะ	kick	เตะ
+**หายใจ	-	หายใจ	-	หายใจ	breathe	หายใจ	-	หายใจ	breathe	หายใจ**
 
-หายใจ	หายใจ	breathe	หายใจ	หายใจ	breathe	หายใจ
+**ตื่น	-	ตื่น	-	ตื่น	wake up	ตื่น	-	ตื่น	wake up	ตื่น**
 
-ตื่น	ตื่น	wake up	ตื่น	ตื่น	wake up	ตื่น
+**หลับ	-	หลับ	-	หลับ	sleep	หลับ	-	หลับ	sleep	หลับ**
 
-หลับ	หลับ	sleep	หลับ	หลับ	sleep	หลับ
+**แต่งตัว	-	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว**
 
-แต่งตัว	แต่งตัว	get dressed	แต่งตัว	แต่งตัว	get dressed	แต่งตัว
+เดิน	-	เดิน	-	เดิน	walk	เดิน	-	เดิน	walk	เดิน
 
-เดิน	เดิน	walk	เดิน	เดิน	walk	เดิน
+**เล่น	-	เล่น	-	เล่น	play	เล่น	-	เล่น	play	เล่น**
 
-เล่น	เล่น	play	เล่น	เล่น	play	เล่น
+ล้างจาน	-	ล้างจาน	-	ล้างจาน	wash the dishes	ล้างจาน	-	ล้างจาน	wash the dishes	ล้างจาน
 
-ล้างจาน	ล้างจาน	wash the dishes	ล้างจาน	ล้างจาน	wash the dishes	ล้างจาน
+**ซักผ้า	-	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า**
 
-ซักผ้า	ซักผ้า	do the laundry	ซักผ้า	ซักผ้า	do the laundry	ซักผ้า
+**สะอาด	-	สะอาด	-	สะอาด	clean	สะอาด	-	สะอาด	clean	สะอาด**
 
-สะอาด	สะอาด	clean	สะอาด	สะอาด	clean	สะอาด
+**ทำความสะอาด	-	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด**
 
-ทำความสะอาด	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด
+เพศสัมพันธ์	-	เพศสัมพันธ์	-	เพศสัมพันธ์	have sex	เพศสัมพันธ์	-	เพศสัมพันธ์	have sex	เพศสัมพันธ์
 
-เพศสัมพันธ์	เพศสัมพันธ์	have sex	เพศสัมพันธ์	เพศสัมพันธ์	have sex	เพศสัมพันธ์
+เกิด	-	เกิด	-	เกิด	be born	เกิด	-	เกิด	be born	เกิด
 
-เกิด	เกิด	be born	เกิด	เกิด	be born	เกิด
-
-ดับ	ดับ	die	ดับ	ดับ	die	ดับ
+**ดับ	-	ดับ	-	ดับ	die	ดับ	-	ดับ	die	ดับ**
