--- a/必须会的100个基础动词.md
+++ b/必须会的100个基础动词.md
@@ -1,9 +1,9 @@
-# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
-# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
-# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
-# กริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# คำกริยากริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# คำกริยากริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# คำกริยากริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
+# คำกริยากริยา - ที่ -คุณ -จะ -ต้อง -เรียนรู้
 
-กริยา verb กริยา 	-	กริยา	-	 กริยา 	-	กริยา 	-	กริยา 	-	กริยา 	-	กริยา verb
+คำกริยา verb คำกริยา 	-	คำกริยา	-	 คำกริยา 	-	คำกริยา 	-	คำกริยา 	-	คำกริยา 	-	คำกริยา verb
 
 
 กิน	-	กิน	-	กิน	eat	กิน	-	กิน	eat	กิน
