--- a/必须会的100个基础动词.md
+++ b/必须会的100个基础动词.md
@@ -64,9 +64,9 @@
 
 ถือ	-	ถือ	-	ถือ	hold	ถือ	-	ถือ	hold	ถือ
 
-##### **โยน	-	โยน	-	โยน	throw	โยน	-	โยน	throw	โยน**
+###  **โยน	-	โยน	-	โยน	throw	โยน	-	โยน	throw	โยน**
 
-##### **ขับ	-	ขับ	-	ขับ	drive/operate	ขับ	-	ขับ	drive/operate	ขับ**
+###  **ขับ	-	ขับ	-	ขับ	drive/operate	ขับ	-	ขับ	drive/operate	ขับ**
 
 บิน	-	บิน	-	บิน	fly	บิน	-	บิน	fly	บิน
 
@@ -104,114 +104,114 @@
 
 พา	-	พา	-	พา	take/bring someone	พา	-	พา	take/bring someone	พา
 
-##### **รอคอย	-	รอคอย	-	รอคอย	wait for	รอคอย	-	รอคอย	wait for	รอคอย**
+### **รอคอย	-	รอคอย	-	รอคอย	wait for	รอคอย	-	รอคอย	wait for	รอคอย**
 
 ช่วย	-	ช่วย	-	ช่วย	help	ช่วย	-	ช่วย	help	ช่วย
 
-##### **เริ่ม	-	เริ่ม	-	เริ่ม	start/begin	เริ่ม	-	เริ่ม	start/begin	เริ่ม**
+###  **เริ่ม	-	เริ่ม	-	เริ่ม	start/begin	เริ่ม	-	เริ่ม	start/begin	เริ่ม**
 
-##### **เลิก	-	เลิก	-	เลิก	stop/quit/end	เลิก	-	เลิก	stop/quit/end	เลิก**
+### **เลิก	-	เลิก	-	เลิก	stop/quit/end	เลิก	-	เลิก	stop/quit/end	เลิก**
 
 สอน	-	สอน	-	สอน	teach	สอน	-	สอน	teach	สอน
 
-##### **ลืม	-	ลืม	-	ลืม	forget	ลืม	-	ลืม	forget	ลืม**
+###  **ลืม	-	ลืม	-	ลืม	forget	ลืม	-	ลืม	forget	ลืม**
 
-##### **แก้ไข	-	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข**
+### **แก้ไข	-	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข	-	แก้ไข	revise/edit/fix	แก้ไข**
 
-##### **ประชุม	-	ประชุม	-	ประชุม	hold a meeting	ประชุม	-	ประชุม	hold a meeting	ประชุม**
+###  **ประชุม	-	ประชุม	-	ประชุม	hold a meeting	ประชุม	-	ประชุม	hold a meeting	ประชุม**
 
-##### **หวัง	-	หวัง	-	หวัง	hope	หวัง	-	หวัง	hope	หวัง**
+###  **หวัง	-	หวัง	-	หวัง	hope	หวัง	-	หวัง	hope	หวัง**
 
-##### **กลัว	-	กลัว	-	กลัว	fear/be afraid of	กลัว	-	กลัว	fear/be afraid of	กลัว**
+###  **กลัว	-	กลัว	-	กลัว	fear/be afraid of	กลัว	-	กลัว	fear/be afraid of	กลัว**
 
-##### **โกรธ	-	โกรธ	-	โกรธ	get angry	โกรธ	-	โกรธ	get angry	โกรธ**
+###  **โกรธ	-	โกรธ	-	โกรธ	get angry	โกรธ	-	โกรธ	get angry	โกรธ**
 
-##### **ยิ้ม	-	ยิ้ม	-	ยิ้ม	smile	ยิ้ม	-	ยิ้ม	smile	ยิ้ม**
+###  **ยิ้ม	-	ยิ้ม	-	ยิ้ม	smile	ยิ้ม	-	ยิ้ม	smile	ยิ้ม**
 
-##### **เลือก	-	เลือก	-	เลือก	choose/select	เลือก	-	เลือก	choose/select	เลือก**
+###  **เลือก	-	เลือก	-	เลือก	choose/select	เลือก	-	เลือก	choose/select	เลือก**
 
-##### **หัวเราะ	-	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ**
+###  **หัวเราะ	-	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ	-	หัวเราะ	laugh	หัวเราะ**
 
-##### **ขึ้น	-	ขึ้น	-	ขึ้น	rise	ขึ้น	-	ขึ้น	rise	ขึ้น**
+###  **ขึ้น	-	ขึ้น	-	ขึ้น	rise	ขึ้น	-	ขึ้น	rise	ขึ้น**
 
-##### **ลง	-	ลง	-	ลง	fall / descend	ลง	-	ลง	fall / descend	ลง**
+###  **ลง	-	ลง	-	ลง	fall / descend	ลง	-	ลง	fall / descend	ลง**
 
-##### **จอด	-	จอด	-	จอด	stop/park(vehicle)	จอด	-	จอด	stop/park(vehicle)	จอด**
+###  **จอด	-	จอด	-	จอด	stop/park(vehicle)	จอด	-	จอด	stop/park(vehicle)	จอด**
 
-**จอง	-	จอง	-	จอง	reserve/book	จอง	-	จอง	reserve/book	จอง**
+### **จอง	-	จอง	-	จอง	reserve/book	จอง	-	จอง	reserve/book	จอง**
 
 พัก	-	พัก	-	พัก	rest/stay	พัก	-	พัก	rest/stay	พัก
 
 เที่ยว	-	เที่ยว	-	เที่ยว	travel/go out	เที่ยว	-	เที่ยว	travel/go out	เที่ยว
 
-##### **เดินทาง	-	เดินทาง	-	เดินทาง	travel	เดินทาง	-	เดินทาง	travel	เดินทาง**
+###  **เดินทาง	-	เดินทาง	-	เดินทาง	travel	เดินทาง	-	เดินทาง	travel	เดินทาง**
 
-##### **หิว	-	หิว	-	หิว	feel hungry	หิว	-	หิว	feel hungry	หิว**
+###  **หิว	-	หิว	-	หิว	feel hungry	หิว	-	หิว	feel hungry	หิว**
 
-##### **อิ่ม	-	อิ่ม	-	อิ่ม	feel full	อิ่ม	-	อิ่ม	feel full	อิ่ม**
+###  **อิ่ม	-	อิ่ม	-	อิ่ม	feel full	อิ่ม	-	อิ่ม	feel full	อิ่ม**
 
-##### **เจ็บ	-	เจ็บ	-	เจ็บ	hurt	เจ็บ	-	เจ็บ	hurt	เจ็บ**
+###  **เจ็บ	-	เจ็บ	-	เจ็บ	hurt	เจ็บ	-	เจ็บ	hurt	เจ็บ**
 
 หาย	-	หาย	-	หาย	disappear / recover	หาย	-	หาย	disappear / recover	หาย
 
-##### **ร้อน	-	ร้อน	-	ร้อน	feel hot	ร้อน	-	ร้อน	feel hot	ร้อน**
+###  **ร้อน	-	ร้อน	-	ร้อน	feel hot	ร้อน	-	ร้อน	feel hot	ร้อน**
 
-##### **แช่แข็ง	-	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง**
+###  **แช่แข็ง	-	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง	-	แช่แข็ง	freeze	แช่แข็ง**
 
-##### **อธิบาย	-	อธิบาย	-	อธิบาย	explain	อธิบาย	-	อธิบาย	explain	อธิบาย**
+###  **อธิบาย	-	อธิบาย	-	อธิบาย	explain	อธิบาย	-	อธิบาย	explain	อธิบาย**
 
-##### **แนะนำ	-	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ**
+###  **แนะนำ	-	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ	-	แนะนำ	introduce / recommend	แนะนำ**
 
 บอก	-	บอก	-	บอก	tell/say	บอก	-	บอก	tell/say	บอก
 
-##### **เรียก	-	เรียก	-	เรียก	call	เรียก	-	เรียก	call	เรียก&&
+###  **เรียก	-	เรียก	-	เรียก	call	เรียก	-	เรียก	call	เรียก&&
 
 คุย	-	คุย	-	คุย	chat/talk	คุย	-	คุย	chat/talk	คุย
 
 เชิญ	-	เชิญ	-	เชิญ	invite	เชิญ	-	เชิญ	invite	เชิญ
 
-##### **ขอโทษ	-	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ**
+###  **ขอโทษ	-	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ	-	ขอโทษ	apologize	ขอโทษ**
 
 ขอบคุณ	-	ขอบคุณ	-	ขอบคุณ	thank	ขอบคุณ	-	ขอบคุณ	thank	ขอบคุณ
 
-##### **มอง	-	มอง	-	มอง	look/stare	มอง	-	มอง	look/stare	มอง**
+###  **มอง	-	มอง	-	มอง	look/stare	มอง	-	มอง	look/stare	มอง**
 
-##### **จับ	-	จับ	-	จับ	grab/hold	จับ	-	จับ	grab/hold	จับ**
+###  **จับ	-	จับ	-	จับ	grab/hold	จับ	-	จับ	grab/hold	จับ**
 
-##### **ดม	-	ดม	-	ดม	smell	ดม	-	ดม	smell	ดม**
+###  **ดม	-	ดม	-	ดม	smell	ดม	-	ดม	smell	ดม**
 
-##### **ชิม	-	ชิม	-	ชิม	taste	ชิม	-	ชิม	taste	ชิม**
+###  **ชิม	-	ชิม	-	ชิม	taste	ชิม	-	ชิม	taste	ชิม**
 
-##### **กัด	-	กัด	-	กัด	bite	กัด	-	กัด	bite	กัด**
+###  **กัด	-	กัด	-	กัด	bite	กัด	-	กัด	bite	กัด**
 
-##### **เลีย	-	เลีย	-	เลีย	lick	เลีย	-	เลีย	lick	เลีย**
+###  **เลีย	-	เลีย	-	เลีย	lick	เลีย	-	เลีย	lick	เลีย**
 
 ตี	-	ตี	-	ตี	hit	ตี	-	ตี	hit	ตี
 
-##### **เตะ	-	เตะ	-	เตะ	kick	เตะ	-	เตะ	kick	เตะ**
+###  **เตะ	-	เตะ	-	เตะ	kick	เตะ	-	เตะ	kick	เตะ**
 
-##### **หายใจ	-	หายใจ	-	หายใจ	breathe	หายใจ	-	หายใจ	breathe	หายใจ**
+###  **หายใจ	-	หายใจ	-	หายใจ	breathe	หายใจ	-	หายใจ	breathe	หายใจ**
 
-##### **ตื่น	-	ตื่น	-	ตื่น	wake up	ตื่น	-	ตื่น	wake up	ตื่น**
+###  **ตื่น	-	ตื่น	-	ตื่น	wake up	ตื่น	-	ตื่น	wake up	ตื่น**
 
-##### **หลับ	-	หลับ	-	หลับ	sleep	หลับ	-	หลับ	sleep	หลับ**
+### **หลับ	-	หลับ	-	หลับ	sleep	หลับ	-	หลับ	sleep	หลับ**
 
-##### **แต่งตัว	-	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว**
+### **แต่งตัว	-	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว	-	แต่งตัว	get dressed	แต่งตัว**
 
 เดิน	-	เดิน	-	เดิน	walk	เดิน	-	เดิน	walk	เดิน
 
-##### **เล่น	-	เล่น	-	เล่น	play	เล่น	-	เล่น	play	เล่น**
+### **เล่น	-	เล่น	-	เล่น	play	เล่น	-	เล่น	play	เล่น**
 
 ล้างจาน	-	ล้างจาน	-	ล้างจาน	wash the dishes	ล้างจาน	-	ล้างจาน	wash the dishes	ล้างจาน
 
-##### **ซักผ้า	-	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า**
+### **ซักผ้า	-	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า	-	ซักผ้า	do the laundry	ซักผ้า**
 
-##### **สะอาด	-	สะอาด	-	สะอาด	clean	สะอาด	-	สะอาด	clean	สะอาด**
+### **สะอาด	-	สะอาด	-	สะอาด	clean	สะอาด	-	สะอาด	clean	สะอาด**
 
-##### **ทำความสะอาด	-	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด**
+### **ทำความสะอาด	-	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด	-	ทำความสะอาด	do a thorough cleaning	ทำความสะอาด**
 
 เพศสัมพันธ์	-	เพศสัมพันธ์	-	เพศสัมพันธ์	have sex	เพศสัมพันธ์	-	เพศสัมพันธ์	have sex	เพศสัมพันธ์
 
 เกิด	-	เกิด	-	เกิด	be born	เกิด	-	เกิด	be born	เกิด
 
-##### **ดับ	-	ดับ	-	ดับ	die	ดับ	-	ดับ	die	ดับ**
+### **ดับ	-	ดับ	-	ดับ	die	ดับ	-	ดับ	die	ดับ**
