--- a/第一册第十课词汇.md
+++ b/第一册第十课词汇.md
@@ -68,45 +68,47 @@
 
 ต่อ	-	ต่อ	-	ต่อ	-	Each, per	-	ต่อ	-	ต่อ	-	Each, per	-	ต่อ
 
-ข้อ	-	ข้อ	-	ข้อ	-	Point, item, issue	-	ข้อ	-	ข้อ	-	Point, item, issue	-	ข้อ
+## ข้อ	-	ข้อ	-	ข้อ	-	Point, item, issue	-	ข้อ	-	ข้อ	-	Point, item, issue	-	ข้อ
 
-ข้อที่ 1	-	ข้อที่ 1	-	ข้อที่ 1	-	Item 1, the first point	-	ข้อที่ 1	-	ข้อที่ 1	-	Item 1, the first point	-	ข้อที่ 1
+## ข้อที่ 1	-	ข้อที่ 1	-	ข้อที่ 1	-	Item 1, the first point	-	ข้อที่ 1	-	ข้อที่ 1	-	Item 1, the first point	-	ข้อที่ 1
 
-สำคัญ	-	สำคัญ	-	สำคัญ	-	Important	-	สำคัญ	-	สำคัญ	-	Important	-	สำคัญ
+## สำคัญ	-	สำคัญ	-	สำคัญ	-	Important	-	สำคัญ	-	สำคัญ	-	Important	-	สำคัญ
 
-ข้อสำคัญ	-	ข้อสำคัญ	-	ข้อสำคัญ	-	Key point	-	ข้อสำคัญ	-	ข้อสำคัญ	-	Key point	-	ข้อสำคัญ
+## ข้อสำคัญ	-	ข้อสำคัญ	-	ข้อสำคัญ	-	Key point	-	ข้อสำคัญ	-	ข้อสำคัญ	-	Key point	-	ข้อสำคัญ
 
-กำลัง	-	กำลัง	-	กำลัง	-	Currently, in progress	-	กำลัง	-	กำลัง	-	Currently, in progress	-	กำลัง
+## กำลัง	-	กำลัง	-	กำลัง	-	Currently, in progress	-	กำลัง	-	กำลัง	-	Currently, in progress	-	กำลัง
 
-อย่า	-	อย่า	-	อย่า	-	Don’t (prohibition)	-	อย่า	-	อย่า	-	Don’t (prohibition)	-	อย่า
+## อย่า	-	อย่า	-	อย่า	-	Don’t (prohibition)	-	อย่า	-	อย่า	-	Don’t (prohibition)	-	อย่า
 
-อย่าลืม	-	อย่าลืม	-	อย่าลืม	-	Don’t forget	-	อย่าลืม	-	อย่าลืม	-	Don’t forget	-	อย่าลืม
+## อย่าลืม	-	อย่าลืม	-	อย่าลืม	-	Don’t forget	-	อย่าลืม	-	อย่าลืม	-	Don’t forget	-	อย่าลืม
 
 เลย	-	เลย	-	เลย	-	At all, really	-	เลย	-	เลย	-	At all, really	-	เลย
 
-กำหนด	-	กำหนด	-	กำหนด	-	Specify, set	-	กำหนด	-	กำหนด	-	Specify, set	-	กำหนด
+## กำหนด	-	กำหนด	-	กำหนด	-	Schedule	-	กำหนด	-	กำหนด	-	Schedule	-	กำหนด
 
-งั้น	-	งั้น	-	งั้น	-	In that case, then	-	งั้น	-	งั้น	-	In that case, then	-	งั้น
+## ตามกำหนด	-	ตามกำหนด	-	ตามกำหนด	-	On schedule	-	กำหนด	-	กำหนด	-	On schedule	-	กำหนด
 
-ไม่งั้น	-	ไม่งั้น	-	ไม่งั้น	-	Otherwise	-	ไม่งั้น	-	ไม่งั้น	-	Otherwise	-	ไม่งั้น
+## งั้น	-	งั้น	-	งั้น	-	In that case, then	-	งั้น	-	งั้น	-	In that case, then	-	งั้น
+
+## ไม่งั้น	-	ไม่งั้น	-	ไม่งั้น	-	Otherwise	-	ไม่งั้น	-	ไม่งั้น	-	Otherwise	-	ไม่งั้น
 
 ถูก	-	ถูก	-	ถูก	-	Correct, cheap	-	ถูก	-	ถูก	-	Correct, cheap	-	ถูก
 
-ปรับ	-	ปรับ	-	ปรับ	-	Adjust, fine	-	ปรับ	-	ปรับ	-	Adjust, fine	-	ปรับ
+## ปรับ	-	ปรับ	-	ปรับ	-	Adjust, fine	-	ปรับ	-	ปรับ	-	Adjust, fine	-	ปรับ
 
-งด	-	งด	-	งด	-	To suspend, cancel	-	งด	-	งด	-	To suspend, cancel	-	งด
+## งด	-	งด	-	งด	-	To suspend, cancel	-	งด	-	งด	-	To suspend, cancel	-	งด
 
-หยุด	-	หยุด	-	หยุด	-	To stop	-	หยุด	-	หยุด	-	To stop	-	หยุด
+## หยุด	-	หยุด	-	หยุด	-	To stop	-	หยุด	-	หยุด	-	To stop	-	หยุด
 
-สิทธิ์ 	-	สิทธิ์	-	สิทธิ์	-	Rights, privileges	-	สิทธิ์	-	สิทธิ์	-	Rights, privileges	-	สิทธิ์
+## สิทธิ์ 	-	สิทธิ์	-	สิทธิ์	-	Rights, privileges	-	สิทธิ์	-	สิทธิ์	-	Rights, privileges	-	สิทธิ์
 
-สิทธิ	-	สิทธิ	-	สิทธิ	-	Rights	-	สิทธิ	-	สิทธิ	-	Rights	-	สิทธิ
+## สิทธิ	-	สิทธิ	-	สิทธิ	-	Rights	-	สิทธิ	-	สิทธิ	-	Rights	-	สิทธิ
 
-อย่างน้อย	-	อย่างน้อย	-	อย่างน้อย	-	At least	-	อย่างน้อย	-	อย่างน้อย	-	At least	-	อย่างน้อย
+## อย่างน้อย	-	อย่างน้อย	-	อย่างน้อย	-	At least	-	อย่างน้อย	-	อย่างน้อย	-	At least	-	อย่างน้อย
 
-ครึ่ง	-	ครึ่ง	-	ครึ่ง	-	Half	-	ครึ่ง	-	ครึ่ง	-	Half	-	ครึ่ง
+## ครึ่ง	-	ครึ่ง	-	ครึ่ง	-	Half	-	ครึ่ง	-	ครึ่ง	-	Half	-	ครึ่ง
 
-เตือน	-	เตือน	-	เตือน	-	To warn, remind	-	เตือน	-	เตือน	-	To warn, remind	-	เตือน
+## เตือน	-	เตือน	-	เตือน	-	To warn, remind	-	เตือน	-	เตือน	-	To warn, remind	-	เตือน
 
 ขอบคุณ	-	ขอบคุณ	-	ขอบคุณ	-	Thank you	-	ขอบคุณ	-	ขอบคุณ	-	Thank you	-	ขอบคุณ
 
@@ -114,7 +116,7 @@
 
 เสร็จ	-	เสร็จ	-	เสร็จ	-	Finish, complete	-	เสร็จ	-	เสร็จ	-	Finish, complete	-	เสร็จ
 
-ถ้า	-	ถ้า	-	ถ้า	-	If	-	ถ้า	-	ถ้า	-	If	-	ถ้า
+## ถ้า	-	ถ้า	-	ถ้า	-	If	-	ถ้า	-	ถ้า	-	If	-	ถ้า
 
 ไม่ดี	-	ไม่ดี	-	ไม่ดี	-	Not good	-	ไม่ดี	-	ไม่ดี	-	Not good	-	ไม่ดี
 
@@ -122,11 +124,11 @@
 
 ทำไม	-	ทำไม	-	ทำไม	-	Why	-	ทำไม	-	ทำไม	-	Why	-	ทำไม
 
-ไม่ถูก	-	ไม่ถูก	-	ไม่ถูก	-	Not correct	-	ไม่ถูก	-	ไม่ถูก	-	Not correct	-	ไม่ถูก
+## ไม่ถูก	-	ไม่ถูก	-	ไม่ถูก	-	Not correct	-	ไม่ถูก	-	ไม่ถูก	-	Not correct	-	ไม่ถูก
 
-รู้จัก	-	รู้จัก	-	รู้จัก	-	To know (someone, something)	-	รู้จัก	-	รู้จัก	-	To know (someone, something)	-	รู้จัก
+## รู้จัก	-	รู้จัก	-	รู้จัก	-	To know (someone, something)	-	รู้จัก	-	รู้จัก	-	To know (someone, something)	-	รู้จัก
 
-รู้จักเหรอ	-	รู้จักเหรอ	-	รู้จักเหรอ	-	Do you know (someone, something)?	-	รู้จักเหรอ	-	รู้จักเหรอ	-	Do you know (someone, something)?	-	รู้จักเหรอ
+## รู้จักเหรอ	-	รู้จักเหรอ	-	รู้จักเหรอ	-	Do you know (someone, something)?	-	รู้จักเหรอ	-	รู้จักเหรอ	-	Do you know (someone, something)?	-	รู้จักเหรอ
 
 แต่	-	แต่	-	แต่	-	But	-	แต่	-	แต่	-	But	-	แต่
 
@@ -134,58 +136,58 @@
 
 เสียใจ	-	เสียใจ	-	เสียใจ	-	To feel sorry, regret	-	เสียใจ	-	เสียใจ	-	To feel sorry, regret	-	เสียใจ
 
-แสน	-	แสน	-	แสน	-	Very, extremely	-	แสน	-	แสน	-	Very, extremely	-	แสน
+## แสน	-	แสน	-	แสน	-	Very, extremely	-	แสน	-	แสน	-	Very, extremely	-	แสน
 
 ทุกคน	-	ทุกคน	-	ทุกคน	-	Everyone	-	ทุกคน	-	ทุกคน	-	Everyone	-	ทุกคน
 
-วรรณคดี	-	วรรณคดี	-	วรรณคดี	-	Literature	-	วรรณคดี	-	วรรณคดี	-	Literature	-	วรรณคดี
+## วรรณคดี	-	วรรณคดี	-	วรรณคดี	-	Literature	-	วรรณคดี	-	วรรณคดี	-	Literature	-	วรรณคดี
 
-ข้างหน้า	-	ข้างหน้า	-	ข้างหน้า	-	In front, ahead	-	ข้างหน้า	-	ข้างหน้า	-	In front, ahead	-	ข้างหน้า
+## ข้างหน้า	-	ข้างหน้า	-	ข้างหน้า	-	In front, ahead	-	ข้างหน้า	-	ข้างหน้า	-	In front, ahead	-	ข้างหน้า
 
-ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์
+## ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์ - ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์ -	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์ - ประวัติศาสตร์	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์	-	ประวัติศาสตร์	-	History	-	ประวัติศาสตร์
 
 รู้	-	รู้	-	รู้	-	To know	-	รู้	-	รู้	-	To know	-	รู้
 
-เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด
+## เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด - เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด - เศรษฐกิด	-	เศรษฐกิด	-	Economics	-	เศรษฐกิด - เศรษฐกิด	-	เศรษฐกิด	-	เศรษฐกิด	
 
-ฉบับ	-	ฉบับ	-	ฉบับ	-	Edition, copy	-	ฉบับ	-	ฉบับ	-	Edition, copy	-	ฉบับ
+## ฉบับ	-	ฉบับ	-	ฉบับ	-	Edition, copy	-	ฉบับ	-	ฉบับ	-	ฉบับ - ฉบับ	-	ฉบับ	-	Edition, copy	-	ฉบับ
 
-การเมือง	-	การเมือง	-	การเมือง	-	Politics	-	การเมือง	-	การเมือง	-	Politics	-	การเมือง
+## การเมือง	-	การเมือง	-	การเมือง	-	การเมือง	-	การเมือง	- Politics	-	การเมือง	-	การเมือง	-	Politics	-	การเมือง
 
 เงิน	-	เงิน	-	เงิน	-	Money	-	เงิน	-	เงิน	-	Money	-	เงิน
 
-ตบมือ	-	ตบมือ	-	ตบมือ	-	To clap, applaud	-	ตบมือ	-	ตบมือ	-	To clap, applaud	-	ตบมือ
+## ตบมือ	-	ตบมือ	-	ตบมือ - ตบมือ	-	ตบมือ	-	ตบมือ	-	To clap, applaud	-	ตบมือ	-	ตบมือ	-	To clap, applaud	-	ตบมือ
 
 หน่อย	-	หน่อย	-	หน่อย	-	A little, please	-	หน่อย	-	หน่อย	-	A little, please	-	หน่อย
 
-ไฟ	-	ไฟ	-	ไฟ	-	Fire, light, electricity	-	ไฟ	-	ไฟ	-	Fire, light, electricity	-	ไฟ
+## ไฟ	-	ไฟ	-	ไฟ	- ไฟ	-	ไฟ	-	ไฟ	-	Fire, light, electricity	-	ไฟ	-	ไฟ	-	Fire, light, electricity	-	ไฟ
 
-โชคดี	-	โชคดี	-	โชคดี	-	Good luck	-	โชคดี	-	โชคดี	-	Good luck	-	โชคดี
+## โชคดี	-	โชคดี	-	โชคดี - โชคดี	-	โชคดี	-	โชคดี	-	Good luck	-	โชคดี	-	โชคดี	-	Good luck	-	โชคดี
 
-สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	Good health	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	Good health	-	สุขภาพแข็งแรง
+## สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	- สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	- สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	- สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	Good health	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	Good health	-	สุขภาพแข็งแรง - สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	-	สุขภาพแข็งแรง	
 
-รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	Wait a moment	-	รอสักครู่	-	รอสักครู่	-	Wait a moment	-	รอสักครู่
+## รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	Wait a moment	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	รอสักครู่	-	Wait a moment	-	รอสักครู่
 
-รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	Wait a short while	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	Wait a short while	-	รอแป๊บหนึ่ง
+## รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	Wait a short while	-	รอแป๊บหนึ่ง -	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	Wait a short while	-	รอแป๊บหนึ่ง	-	รอแป๊บหนึ่ง	-	Wait a short while	-	รอแป๊บหนึ่ง
 
-เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	Wait a second	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	Wait a second	-	เดี๋ยวก่อน
+## เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	- เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	- Wait a second	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	-	เดี๋ยวก่อน	- Wait a second	-	เดี๋ยวก่อน
 
-ผู้โดยสาร	-	ผู้โดยสาร	-	ผู้โดยสาร	-	Passenger	-	ผู้โดยสาร	-	ผู้โดยสาร	-	Passenger	-	ผู้โดยสาร
+## ผู้โดยสาร	-	ผู้โดยสาร	-	ผู้โดยสาร ผู้โดยสาร	-	ผู้โดยสาร	-	ผู้โดยสาร	-	Passenger	-	ผู้โดยสาร	-	ผู้โดยสาร	-	Passenger	-	ผู้โดยสาร - ผู้โดยสาร	-	ผู้โดยสาร	-	ผู้โดยสาร
 
-แน่ใจ	-	แน่ใจ	-	แน่ใจ	-	To be sure, certain	-	แน่ใจ	-	แน่ใจ	-	To be sure, certain	-	แน่ใจ
+## แน่ใจ	-	แน่ใจ	-	แน่ใจ	-	แน่ใจ	-	แน่ใจ	-	แน่ใจ	- To be sure, certain	-	แน่ใจ	-	แน่ใจ	-	To be sure, certain	-	แน่ใจ - แน่ใจ	-	แน่ใจ	-	แน่ใจ	-
 
-สนใจ	-	สนใจ	-	สนใจ	-	Interested	-	สนใจ	-	สนใจ	-	Interested	-	สนใจ
+## สนใจ	-	สนใจ	-	สนใจ	-	สนใจ	-	สนใจ	-	สนใจ	-	Interested	-	สนใจ	-	สนใจ	-	Interested	-	สนใจ - สนใจ	-	สนใจ	-	สนใจ
 
-ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	To dream of, aspire	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	To dream of, aspire	-	ใฝ่ฝัน
+## ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	To dream of, aspire	-	ใฝ่ฝัน	-	ใฝ่ฝัน	-	To dream of, aspire	-	ใฝ่ฝัน - ใฝ่ฝัน	-	ใฝ่ฝัน	-	ใฝ่ฝัน
 
-ใจลอย	-	ใจลอย	-	ใจลอย	-	Absent-minded, distracted	-	ใจลอย	-	ใจลอย	-	Absent-minded, distracted	-	ใจลอย
+## ใจลอย	-	ใจลอย	-	ใจลอย	- ใจลอย	-	ใจลอย	-	ใจลอย	-		Absent-minded, distracted	-	ใจลอย	-	ใจลอย	-	Absent-minded, distracted	-	ใจลอย - ใจลอย	-	ใจลอย	-	ใจลอย	-	
 
- พูดใจ	-	พูดใจ	-	พูดใจ	-	To speak sincerely, heartfelt words	-	พูดใจ	-	พูดใจ	-	To speak sincerely, heartfelt words	-	พูดใจ
+## พูดใจ	-	พูดใจ	-	พูดใจ	-	พูดใจ	-	พูดใจ	-	พูดใจ	-	To speak sincerely, heartfelt words	-	พูดใจ	-	พูดใจ	-	To speak sincerely, heartfelt words	-	พูดใจ - พูดใจ	-	พูดใจ	-	พูดใจ
  
- รักษา	-	รักษา	-	รักษา	-	To treat, protect	-	รักษา	-	รักษา	-	To treat, protect	-	รักษา
+## รักษา	-	รักษา	-	รักษา	- รักษา	-	รักษา	-	รักษา	-	To treat, protect	-	รักษา	-	รักษา	-	To treat, protect	-	รักษา -  รักษา	-	รักษา	-	รักษา	- รักษา	-	รักษา	-	รักษา
  
- สามารถ	-	สามารถ	-	สามารถ	-	To be able, capable	-	สามารถ	-	สามารถ	-	To be able, capable	-	สามารถ
+## สามารถ	-	สามารถ	-	สามารถ	-	To be able, capable	-	สามารถ	-	สามารถ	-	To be able, capable	-	สามารถ -  สามารถ	-	สามารถ	-	สามารถ	- สามารถ	-	สามารถ	-	สามารถ
  
- จิตใจ	-	จิตใจ	-	จิตใจ	-	Mind, spirit, heart	-	จิตใจ	-	จิตใจ	-	Mind, spirit, heart	-	จิตใจ
+## จิตใจ	-	จิตใจ	-	จิตใจ	-	จิตใจ	-	จิตใจ	-	จิตใจ	-Mind, spirit, heart	-	จิตใจ	-	จิตใจ	-	Mind, spirit, heart	-	จิตใจ - จิตใจ	-	จิตใจ	-	จิตใจ
  
- ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง	-	Example	-	ตัวอย่าง	-	ตัวอย่าง	-	Example	-	ตัวอย่าง
+## ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง	-	Example	-	ตัวอย่าง	-	ตัวอย่าง	-	Example	-	ตัวอย่าง - ตัวอย่าง	-	ตัวอย่าง	-	ตัวอย่าง
