--- a/第一册第十课词汇.md
+++ b/第一册第十课词汇.md
@@ -2,7 +2,7 @@
 
 นังสือแบบเรียนภาษาไทย	-	นังสือแบบเรียนภาษาไทย	-	นังสือแบบเรียนภาษาไทย	-	Thai language textbook	-	นังสือแบบเรียนภาษาไทย	-	นังสือแบบเรียนภาษาไทย	-	Thai language textbook	-	นังสือแบบเรียนภาษาไทย
 
-บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-	Librarian	-	บรรณารักษ์	-	บรรณารักษ์	-	Librarian	-	บรรณารักษ์
+บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-	บรรณารักษ์	-Librarian	-	บรรณารักษ์	-	บรรณารักษ์	-	Librarian	-	บรรณารักษ์ 
 
 คอย	-	คอย	-	คอย	-	To wait, to keep waiting	-	คอย	-	คอย	-	To wait, to keep waiting	-	คอย
 
